2022-10-03T16:35:45Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3175842870
* notice: last 14d: unq all: 9 37
* notice: prev accum: outdated-unq outdated-all / unq all: 619 2461 / 643 2500
* notice: next accum: outdated-unq outdated-all / unq all: 621 2464 / 643 2501
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-09-19] / []

2022-10-03T08:29:41Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3172693888
* notice: last 14d: unq all: 9 39
* notice: prev accum: outdated-unq outdated-all / unq all: 619 2461 / 643 2501
* notice: next accum: outdated-unq outdated-all / unq all: 619 2461 / 643 2500
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +2 +3 -0 -1 / 2 2
* notice: removed / changed dates: [] / [2022-09-19]

2022-10-03T01:51:39Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3170979702
* notice: last 14d: unq all: 9 40
* notice: prev accum: outdated-unq outdated-all / unq all: 616 2456 / 641 2497
* notice: next accum: outdated-unq outdated-all / unq all: 619 2461 / 643 2501
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-09-18] / []

2022-10-02T16:28:55Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3169291282
* notice: last 14d: unq all: 9 41
* notice: prev accum: outdated-unq outdated-all / unq all: 616 2456 / 642 2499
* notice: next accum: outdated-unq outdated-all / unq all: 616 2456 / 641 2497
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -2 / +3 +5 -2 -4 / 1 1
* notice: removed / changed dates: [] / [2022-09-18]

2022-10-02T08:26:39Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3167890872
* notice: last 14d: unq all: 10 43