@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-10-03T16:35:45Z",
+  "timestamp" : "2022-10-04T02:00:58Z",
   "count_outdated" : 2464,
   "uniques_outdated" : 621,
-  "count" : 2501,
+  "count" : 2500,
   "uniques" : 643,
   "clones" : [
     {
       "timestamp": "2022-09-20T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
