@@ -1,10 +1,10 @@
 {
-  "count": 37,
+  "count": 36,
   "uniques": 9,
   "clones": [
     {
       "timestamp": "2022-09-20T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
