@@ -1,3 +1,11 @@
+2022-10-04T02:00:58Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3178850824
+* notice: last 14d: unq all: 9 36
+* notice: prev accum: outdated-unq outdated-all / unq all: 621 2464 / 643 2501
+* notice: next accum: outdated-unq outdated-all / unq all: 621 2464 / 643 2500
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-09-20]
+
 2022-10-03T16:35:45Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3175842870
 * notice: last 14d: unq all: 9 37
